Middle east fixes and Pops
Pops redone for France, Iberia, and part of North Italy

--- a/KOS/localisation/000_HPM_Misc.csv
+++ b/KOS/localisation/000_HPM_Misc.csv
@@ -4,7 +4,7 @@ levantine;Greco-Caucasian;;;;;;;;;;;;;
 alexandrian_orthodox;Alexandrian Orthodox;;;;;;;;;;;;;
 anglican;Anglican;;;;;;;;;;;;;
 taiping;Taiping Christianity;;;;;;;;;;;;;
-zoroastrian;Zoroastrian;;;;;;;;;;;;;
+zoroastrian;Mazadayan;;;;;;;;;;;;;
 jain;Jain;;;;;;;;;;;;;
 syriac;Syriac;;;;;;;;;;;;;
 fetishist;Fetishist;;;;;;;;;;;;;
