--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -3141,8 +3141,8 @@ AUB_presidential_dictatorship;Austroslavia;;;;;;;;;;;;;
 AUB_parliamentary_republic;Austroslavia;;;;;;;;;;;;;
 MIN;Ming Empire;;;;;;;;;;;;;
 MIN_ADJ;Chinese;;;;;;;;;;;;;
-TBA;Tabarestun;;;;;;;;;;;;;
-TBA_ADJ;Tabarestuni;;;;;;;;;;;;;
+TBA;Tabarestan;;;;;;;;;;;;;
+TBA_ADJ;Tabarestani;;;;;;;;;;;;;
 CRN;Cornwall;Cornouaille;Cornwall;Kornwalia;Cornualles;Cornovaglia;Cornwall;Cornwall;Cornwall;Cornwall;Cornualha;Корнуолл;Cornwall;
 CRN_ADJ;Cornish;Cornouaillais;Kornisch;Kornwalii;de Cornualles;Cornica;cornwalli;cornwallskэ;cornwalli;Cornish;Cornish;Корнуольск.;Cornish;
 PHC;Hungary-Poland;;;;;;;;;;;;;
