--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -469,11 +469,11 @@ PROV724;Gêna;;;;;;;;;;;;;
 PROV726;Milà;;;;;;;;;;;;;
 PROV754;Napoli;;;;;;;;;;;;;
 PROV729;Venèzia;;;;;;;;;;;;;
-PROV720;Turin;;;;;;;;;;;;;
+PROV720;Tòrin;;;;;;;;;;;;;
 PROV731;Padoa;;;;;;;;;;;;;
 PROV722;Noara;;;;;;;;;;;;
 PROV723;Aleissandrìo;;;;;;;;;;;;
-PROV725;Savouno;;;;;;;;;;;;
+PROV725;Sàvònna;;;;;;;;;;;;
 PROV727;Bèrghem;;;;;;;;;;;;
 PROV728;Brèsa;;;;;;;;;;;;
 PROV730;Verùna;;;;;;;;;;;;
@@ -482,7 +482,7 @@ PROV736;Tergeste;;;;;;;;;;;;
 PROV737;Accilenia;;;;;;;;;;;;
 PROV738;Pärma;;;;;;;;;;;;
 PROV739;Mòdna;;;;;;;;;;;;
-PROV740;Masa;;;;;;;;;;;;
+PROV740;Massa;;;;;;;;;;;;
 PROV741;Bologna;;;;;;;;;;;;
 PROV742;Ferara;;;;;;;;;;;;
 PROV743;Ravena;;;;;;;;;;;;
@@ -1230,6 +1230,28 @@ PROV1866;Bale;;;;;;;;;;;;;
 PROV1867;Ogaden;;;;;;;;;;;;;
 SOM_1868;South Somaliland;;;;;;;;;;;;;
 SOM_1872;North Somaliland;;;;;;;;;;;;;
+PROV100;Phoenix;;;;;;;;;;;;
+PROV101;Flagstaff;;;;;;;;;;;;
+PROV102;Tucson;;;;;;;;;;;;
+PROV132;Ortusurbenum;;;;;;;;;;;;
+PROV133;Austin;;;;;;;;;;;;
+PROV136;El Paso;;;;;;;;;;;;
+PROV137;San Antonio;;;;;;;;;;;;
+PROV138;Laredo;;;;;;;;;;;;
+PROV139;Nova Roma;;;;;;;;;;;;
+PROV140;Rubribaculum;;;;;;;;;;;;
+PROV141;Cuelcuecenum;;;;;;;;;;;;
+PROV142;Caddaecum;;;;;;;;;;;;
+PROV143;Little Rock;;;;;;;;;;;;
+PROV144;Hot Springs;;;;;;;;;;;;
+PROV145;Fayetteville;;;;;;;;;;;;
+PROV146;St Louis;;;;;;;;;;;;
+PROV147;Joplin;;;;;;;;;;;;
+PROV148;Malden;;;;;;;;;;;;
+PROV149;Jefferson City;;;;;;;;;;;;
+PROV150;Kansas City;;;;;;;;;;;;
+PROV151;Des Moines;;;;;;;;;;;;
+PROV152;Oskaloosa;;;;;;;;;;;;
 FRA_1878;Guinea-Bissau;;;;;;;;;;;;;
 FRA_1883;Guinea;;;;;;;;;;;;;
 ASH_1909;Gold Coast;;;;;;;;;;;;;
@@ -1283,7 +1305,7 @@ PROV447;Peireguers;;;;;;;;;;;;;
 PROV449;Mende;;;;;;;;;;;;
 PROV450;Carcin;;;;;;;;;;;;
 PROV451;Lyon;;;;;;;;;;;;;
-PROV453;Valença;;;;;;;;;;;;
+PROV453;Privàs;;;;;;;;;;;;
 PROV454;Graswalde;;;;;;;;;;;;
 PROV455;Tolosa;;;;;;;;;;;;
 PROV456;Albi;;;;;;;;;;;;
@@ -1298,7 +1320,7 @@ PROV463;Narbona;;;;;;;;;;;;;
 PROV464;Perpinyà;;;;;;;;;;;;
 PROV465;Savoye;;;;;;;;;;;;
 PROV466;Kamrach;;;;;;;;;;;;
-PROV467;Marselha;;;;;;;;;;;;
+PROV467;Masselha;;;;;;;;;;;;
 PROV468;Montelaimar;;;;;;;;;;;;;
 PROV469;Dinha;;;;;;;;;;;;
 PROV470;Tolon;;;;;;;;;;;;
@@ -1337,7 +1359,7 @@ PROV607;Gämf;;;;;;;;;;;;
 PROV608;Noieburg;;;;;;;;;;;;
 PROV611;Chéira;;;;;;;;;;;;
 PROV614;Vallis;;;;;;;;;;;;
-PROV721;Osta;;;;;;;;;;;;
+PROV721;Uttä;;;;;;;;;;;;
 PROV733;Ùdine;;;;;;;;;;;;
 PROV734;Trént;;;;;;;;;;;;;
 PROV735;Bulsan;;;;;;;;;;;;
@@ -1457,7 +1479,7 @@ PROV3249;Old Tianjin;;;;;;;;;;;;;
 PROV606;Lozärn;;;;;;;;;;;;;
 PROV2627;Coudersport;;;;;;;;;;;;;
 PROV160;Superior;;;;;;;;;;;;;
-PROV3250;Valenz;;;;;;;;;;;;;
+PROV3250;Belley;;;;;;;;;;;;;
 PROV3251;Mónegu;;;;;;;;;;;;;
 PROV185;Pikeville;;;;;;;;;;;;;
 PROV186;Lexington;;;;;;;;;;;;;
@@ -1734,7 +1756,7 @@ PROV3682;Novae Casilinum;;;;;;;;;;;;;
 PROV3683;Tegesta;;;;;;;;;;;;;
 PROV3684;Caalus;;;;;;;;;;;;;
 PROV3685;Sahuasanum;;;;;;;;;;;;;
-PROV3686;Quigaltanum;;;;;;;;;;;;;
+PROV3686;Cuigaltanum;;;;;;;;;;;;;
 PROV3687;Cahinium;;;;;;;;;;;;;
 PROV3688;Athabasca;;;;;;;;;;;;;
 PROV3689;Lac de la Biche;;;;;;;;;;;;;
@@ -1806,7 +1828,7 @@ PROV3754;Ast;;;;;;;;;;;;;
 PROV3755;Mantoa;;;;;;;;;;;;;
 PROV3756;Montfràt;;;;;;;;;;;;;
 PROV3757;Agenàs;;;;;;;;;;;;;
-PROV3758;Ivrèja;;;;;;;;;;;;;
+PROV3758;Eebri;;;;;;;;;;;;;
 PROV3759;Armanhac;;;;;;;;;;;;;
 PROV3760;Isenburg;;;;;;;;;;;;;
 PROV3761;Viguera;;;;;;;;;;;;;
@@ -1835,7 +1857,7 @@ PROV3783;Witebaai;;;;;;;;;;;;;
 PROV3784;Nij-Breedaa;;;;;;;;;;;;;
 PROV3785;Marhaven;;;;;;;;;;;;;
 PROV3786;Blidhaven;;;;;;;;;;;;;
-PROV3840;Pavie;;;;;;;;;;;;;
+PROV3840;Pòbia;;;;;;;;;;;;;
 PROV3841;Opidda;;;;;;;;;;;;;
 PROV3842;Zhongba;;;;;;;;;;;;;
 PROV3843;Spiti;;;;;;;;;;;;;
@@ -1947,3 +1969,6 @@ PROV3948;Óchipotámia;;;;;;;;;;;;;
 PROV3949;Najran;;;;;;;;;;;;;
 PROV3950;AlHait;;;;;;;;;;;;;
 PROV3951;Hafar al-Batin;;;;;;;;;;;;;
+PROV3952;Logroño;;;;;;;;;;;;;
+PROV3953;Urgèl;;;;;;;;;;;;;
+PROV3954;Jaka;;;;;;;;;;;;;
