--- a/KOS/localisation/00_HPM_modifiers.csv
+++ b/KOS/localisation/00_HPM_modifiers.csv
@@ -114,7 +114,7 @@ silver_mine;Silver Mine;;;;;;;;;;;;;
 krakow_is_austrian;Krakow is Austrian;;;;;;;;;;;;;
 great_irish_famine;Great Irish Famine;;;;;;;;;;;;;
 preparations_to_kill;Extermination Camps;;;;;;;;;;;;;
-sunni_country;Sunni Religion;;;;;;;;;;;;;
+sunni_country;Muslim Religion;;;;;;;;;;;;;
 shiite_country;Shiite Religion;;;;;;;;;;;;;
 ibadi_country;Ibadi Religion;;;;;;;;;;;;;
 roman_catholic_country;Roman Catholic Religion;;;;;;;;;;;;;
