--- a/KOS/localisation/LocMergeFile.csv
+++ b/KOS/localisation/LocMergeFile.csv
@@ -2473,7 +2473,7 @@ protestant_religion;Protestant state religion;;;;;;;;;;;;;
 orthodox_religion;Orthodox state religion;;;;;;;;;;;;;
 mormon_religion;Mormon state religion;;;;;;;;;;;;;
 coptic_religion;Axumite state religion;;;;;;;;;;;;;
-sunni_religion;Sunni state religion;;;;;;;;;;;;;
+sunni_religion;Muslim state religion;;;;;;;;;;;;;
 shiite_religion;Shiite state religion;;;;;;;;;;;;;
 shinto_religion;Shinto state religion;;;;;;;;;;;;;
 mahayana_religion;Mahayana state religion;;;;;;;;;;;;;
