--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -455,15 +455,15 @@ ARM;Pahlaw;;;;;;;;;;;;
 ARM_ADJ;Parthian;;;;;;;;;;;;
 HDJ;Al-Hijaziyyah;;;;;;;;;;;;
 HDJ_ADJ;Hijazi;;;;;;;;;;;;
-PER_absolute_monarchy;Karianid Empire;;;;;;;;;;;;;
-PER_absolute_monarchy_ADJ;Karianid;;;;;;;;;;;;;
-PER_prussian_constitutionalism;Karianid Empire;;;;;;;;;;;;;
-PER_prussian_constitutionalism_ADJ;Karianid;;;;;;;;;;;;;
+PER_absolute_monarchy;Siyawashid Empire;;;;;;;;;;;;;
+PER_absolute_monarchy_ADJ;Siyawashid;;;;;;;;;;;;;
+PER_prussian_constitutionalism;Siyawashid Empire;;;;;;;;;;;;;
+PER_prussian_constitutionalism_ADJ;Siyawashid;;;;;;;;;;;;;
 PER_hms_government;Imperial State of Iran;;;;;;;;;;;;;
-PER_absolute_empire;Karianid Empire;;;;;;;;;;;;;
-PER_absolute_empire_ADJ;Karianid;;;;;;;;;;;;;
-PER_semi_constitutional_empire;Karianid Empire;;;;;;;;;;;;;
-PER_semi_constitutional_empire_ADJ;Karianid;;;;;;;;;;;;;
+PER_absolute_empire;Siyawashid Empire;;;;;;;;;;;;;
+PER_absolute_empire_ADJ;Siyawashid;;;;;;;;;;;;;
+PER_semi_constitutional_empire;Siyawashid Empire;;;;;;;;;;;;;
+PER_semi_constitutional_empire_ADJ;Siyawashid;;;;;;;;;;;;;
 PER_constitutional_empire;Imperial State of Iran;;;;;;;;;;;;;
 PER_democracy;Iran;;;;;;;;;;;;;
 PER_presidential_dictatorship;Iran;;;;;;;;;;;;;
@@ -566,8 +566,8 @@ MEG;Megabares;;;;;;;;;;;;;
 MEG_ADJ;Megabarian;;;;;;;;;;;;;
 ADL;Adulis;;;;;;;;;;;;;
 ADL_ADJ;Adulisian;;;;;;;;;;;;;
-TAY;Tayyi;;;;;;;;;;;;;
-TAY_ADJ;Tayyi;;;;;;;;;;;;;
+TAY;Diriyid Caliphate;;;;;;;;;;;;;
+TAY_ADJ;Diriyid;;;;;;;;;;;;;
 BTY;Taym;;;;;;;;;;;;;
 BTY_ADJ;Taym;;;;;;;;;;;;;
 ETH;Abisiniya;;;;;;;;;;;;
@@ -785,7 +785,6 @@ ulisianu;Ulisianu;x;;;;
 lusitanian;Lusitanian;x;;;;
 neo_phoenician;Neo-Phoenician;x;;;;
 latin;Latin;x;;;;
-chaotic_latin;Chaotic Latin;x;;;;
 halicsiai;Halicsiai;x;;;;
 szekely;Szekely;x;;;;
 vizselyi;Vizselyi;x;;;;
@@ -794,12 +793,6 @@ kunsag;Kunsag;x;;;;
 travesz;Travesz;x;;;;
 tiszai;Tiszai;x;;;;
 histri;Istriota;x;;;;
-liburni;Liburni;x;;;;
-dalmatae;Dalmatae;x;;;;
-dardani;Dardani;x;;;;
-paeonian;Paeonian;x;;;;
-autariatai;Autariatai;x;;;;
-thracian;Thracian;x;;;;
 bohemish;Bohemish;x;;;;
 livonian;Livonian;x;;;;
 preitsii;Preitsii;x;;;;
@@ -879,15 +872,9 @@ bithynian;Bithynian;x;;;;
 thraikes;Thraikes;x;;;;
 aeolic;Aeolic-Ionic;x;;;;
 lycian;Lycian;x;;;;
-pamphylian;Pamphylian;x;;;;
-carian;Carian;x;;;;
 lydian;Lydian;x;;;;
 phrygian;Phrygian;x;;;;
-pisidian;Pisidian;x;;;;
-milyan;Milyan;x;;;;
-mysian;Mysian;x;;;;
-paphlagonian;Paphlagonian;x;;;;
-isaurian;Isaurian;x;;;;
+luwian;Luwian;x;;;;
 cataonian;Cataonian;x;;;;
 trojan;Trojan;x;;;;
 lycaonian;Lycaonian;x;;;;
@@ -1024,14 +1011,15 @@ epirote;Epirote;x;;;;
 moesogothic;Moesogoths;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
-modern_pagan;Modern Paganism;x;;;;
+modern_pagan;Modern Pagan;x;;;;
 asatru;Asatru;x;;;;
-arianism;Arianism;x;;;;
+arianism;Arianist;x;;;;
 manichaean;Manichaean;x;;;;
-kemetic;Kemetic;x;;;;
-vulgar;Vulgar Christianism;x;;;;
+vulgar;Vulgar Christian;x;;;;
 uralic;Uralic;x;;;;
 zalmoxis;Zalmoxite;x;;;;
+sunni;Muhammadite;;;;;;;;;;;;
+sol_invictus;Sol Invictus;x;;;;
 change_province_names_OOS_title;Ooselmaa is Ooselid!;x;
 change_province_names_OOS_desc;Our Nation beautiful lands need Ooselid names!;x;
 change_province_names_GYO_title;Gyozelesziget is Gyozeleszi!;x;
