--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -8666,28 +8666,6 @@ PROV95;Elko;Elko;Elko;;Elko;;;;;;;;
 PROV96;Las Vegas;Las Vegas;Las Vegas;;Las Vegas;;;;;;;;
 PROV97;Salt Lake City;Salt Lake City;Salt Lake City;;Salt Lake City;;;;;;;;
 PROV99;Moab;Moab;Moab;;Moab;;;;;;;;
-PROV100;Phoenix;Phoenix;Phoenix;;Phoenix;;;;;;;;
-PROV101;Flagstaff;Flagstaff;Flagstaff;;Flagstaff;;;;;;;;
-PROV102;Tucson;Tucson;Tucson;;Tucson;;;;;;;;
-PROV132;Houston;Houston;Houston;;Houston;;;;;;;;
-PROV133;Austin;Austin;Austin;;Austin;;;;;;;;
-PROV136;El Paso;El Paso;El Paso;;El Paso;;;;;;;;
-PROV137;San Antonio;San Antonio;San Antonio;;San Antonio;;;;;;;;
-PROV138;Laredo;Laredo;Laredo;;Laredo;;;;;;;;
-PROV139;New Orleans;Nouvelle-Orléans;New Orleans;;Nueva Orleans;;;;;;;;
-PROV140;Baton Rouge;Baton Rouge;Baton Rouge;;Baton Rouge;;;;;;;;
-PROV141;Lake Charles;Lake Charles;Lake Charles;;Lago Charles;;;;;;;;
-PROV142;Shreveport;Shreveport;Shreveport;;Shreveport;;;;;;;;
-PROV143;Little Rock;Little Rock;Little Rock;;Little Rock;;;;;;;;
-PROV144;Hot Springs;Hot Springs;Hot Springs;;Hot Springs;;;;;;;;
-PROV145;Fayetteville;Fayetteville;Fayetteville;;Fayetteville;;;;;;;;
-PROV146;St Louis;St Louis;St Louis;;St. Louis;;;;;;;;
-PROV147;Joplin;Joplin;Joplin;;Joplin;;;;;;;;
-PROV148;Malden;Malden;Malden;;Malden;;;;;;;;
-PROV149;Jefferson City;Jefferson City;Jefferson City;;Jefferson City;;;;;;;;
-PROV150;Kansas City;Kansas City;Kansas City;;Kansas City;;;;;;;;
-PROV151;Des Moines;Des Moines;Des Moines;;Des Moines;;;;;;;;
-PROV152;Oskaloosa;Oskaloosa;Oskaloosa;;Oskaloosa;;;;;;;;
 PROV153;Cedar Rapids;Cedar Rapids;Cedar Rapids;;Rápidos de Cedar;;;;;;;;
 PROV154;Sioux City;Sioux City;Sioux City;;Sioux City;;;;;;;;
 PROV159;Milwaukee;Milwaukee;Milwaukee;;Milwaukee;;;;;;;;
@@ -8863,7 +8841,7 @@ PROV406;Troyes;Troyes;Troyes;;Troyes;;;;;;;;
 PROV419;Channel Islands;Îles Anglo-Normandes;Kanalinseln;;Islas del Canal;;;;;;;;
 PROV425;Paris;Paris;Paris;;París;;;;;;;;
 PROV426;Chartres;Chartres;Chartres;;Chartres;;;;;;;;
-PROV427;Melun;Melun;Melun;;Melun;;;;;;;;
+PROV427;Provins;Provins;Provins;;Provins;;;;;;;;
 PROV428;Dijon;Dijon;Dijon;;Dijon;;;;;;;;
 PROV429;Auxerre;Auxerre;Auxerre;;Auxerre;;;;;;;;
 PROV436;Le Mans;Le Mans;Le Mans;;Le Mans;;;;;;;;
@@ -10916,7 +10894,6 @@ roman_catholic;Roman Catholic;Roman Catholic;Roman Catholic;;Roman Catholic;;;;;
 african_catholic;African Catholic;African Catholic;African Catholic;;African Catholic;;;;;;;;
 thessalonian_orthodox;Thessalonian Orthodox;Thessalonian Orthodox;Thessalonian Orthodox;;Thessalonian Orthodox;;;;;;;;
 coptic;Axumite;Axumite;Axumite;;Axumite;;;;;;;;
-sunni;Sunni;Sunnites;Sunnitisch;;Sunn?;;;;;;;;
 shiite;Shiite;Chiites;Schiitisch;;Chiíta;;;;;;;;
 jewish;Jewish;Juifs;Jüdisch;;Judía;;;;;;;;
 mahayana;Mahayana;Mahayana;Mahayana;;Budista Mahayana;;;;;;;;
