Very small changes, PC switch

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1023,6 +1023,11 @@ PRU_701;Polszcza;;;;;;;;;;;;
 PROV711;Gintunzeme;;;;;;;;;;;;;
 RUS_715;West Galicia;;;;;;;;;;;;;
 PROV1316;Puttur;;;;;;;;;;;;
+PROV1283;Golconda;;;;;;;;;;;;
+PROV1284;Khadki;;;;;;;;;;;;
+PROV1285;Induru;;;;;;;;;;;;
+PROV1314;Udhagai;;;;;;;;;;;;
+MYS_1314;Mysuru;;;;;;;;;;;;;
 PROV663;Suceava;;;;;;;;;;;;
 PROV664;Bukuria;;;;;;;;;;;;
 PROV667;Targovica;;;;;;;;;;;;
@@ -1892,7 +1897,7 @@ PROV3862;Nagapattinam;;;;;;;;;;;;;
 PROV3863;Palakkad;;;;;;;;;;;;;
 PROV3864;Chengalpattu;;;;;;;;;;;;;
 PROV3865;Salem;;;;;;;;;;;;;
-PROV3866;Mysoree;;;;;;;;;;;;;
+PROV3866;Mysuru;;;;;;;;;;;;;
 PROV3867;Bidanur;;;;;;;;;;;;;
 PROV3868;Anantapur;;;;;;;;;;;;;
 PROV3869;Bellary;;;;;;;;;;;;;
@@ -1902,7 +1907,7 @@ PROV3872;Yadgir;;;;;;;;;;;;;
 PROV3873;Ratnagiri;;;;;;;;;;;;;
 PROV3874;Solapur;;;;;;;;;;;;;
 PROV3875;Bidar;;;;;;;;;;;;;
-PROV3876;Daulatabad;;;;;;;;;;;;;
+PROV3876;Devagiri;;;;;;;;;;;;;
 PROV3877;Mumbai;;;;;;;;;;;;;
 PROV3878;Thana;;;;;;;;;;;;;
 PROV3879;Navsari;;;;;;;;;;;;;
