--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -44,7 +44,7 @@ SZA;Kunság;x;;;;
 SZA_ADJ;Kunság;x;;;;
 HLC;Halics;x;;;;
 HLC_ADJ;Halicsiai;x;;;;
-LDM;Vizselohország;x;;;;
+LDM;Vizselország;x;;;;
 LDM_ADJ;Vizseloh;x;;;;
 HIS;Eîstria;x;;;;
 HIS_ADJ;Histri;x;;;;
@@ -314,8 +314,6 @@ BSL;Basel-Monbéliard;x;;;;
 BSL_ADJ;Bâleur;x;;;;
 SPE;Speyer;x;;;;
 SPE_ADJ;Spireur;x;;;;
-WAC;Wacyruxs;x;;;;
-WAC_ADJ;Wacyruxs;x;;;;
 GET;Getae;x;;;;
 GET_ADJ;Getae;x;;;;
 CRP;Carpiani;x;;;;
@@ -988,7 +986,6 @@ chorasmian;Chorasmian;x;;;;
 latogatorok;Látogatórok;x;;;;
 batorok;Bátorok;x;;;;
 kushite;Kushite;x;;;;
-wacyruxs;Wacyruxs;x;;;;
 getae;Getae;x;;;;
 daci;Daci;x;;;;
 carpi;Carpi;x;;;;
