quick pc switch

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -614,6 +614,8 @@ ODS;Óðins Synir ;;;;;;;;;;;;
 ODS_ADJ;Odinsir;;;;;;;;;;;;
 TRR;Þrumurróðrar;;;;;;;;;;;;
 TRR_ADJ;Þrumurróðrar;;;;;;;;;;;;
+HYD;Sohrabids;;;;;;;;;;;;
+HYD_ADJ;Sohrabid;;;;;;;;;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Parteix;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
