--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -348,6 +348,7 @@ DUM_ADJ;Dumnonian;x;;;;
 PWS;Powys;x;;;;
 PWS_ADJ;Powys;x;;;;
 PWS_elective_monarchy;Prydain;;;;;;;;;;;;;
+PWS_elective_monarchy_ADJ;Pryddish;;;;;;;;;;;;;
 ALC;Alt Clut;x;;;;
 ALC_ADJ;Alt Clut;x;;;;
 EBR;Ebrauc;x;;;;
