KOS Peru part 1

--- a/KOS/localisation/00000kermit.csv
+++ b/KOS/localisation/00000kermit.csv
@@ -3,9 +3,9 @@ PROV2281;Manta;;;;;;;;;;;;;
 PROV2283;Puruha;;;;;;;;;;;;;
 PROV2299;Antawaylla;;;;;;;;;;;;;
 PROV2297;Chinchaykamak;;;;;;;;;;;;;
-PROV3382;Jonikos;;;;;;;;;;;;;
+PROV3382;Shipibo-Konibo;;;;;;;;;;;;;
 PROV3787;Tallan;;;;;;;;;;;;;
-PROV3788;Palta;;;;;;;;;;;;;
+PROV3788;Kusipampa;;;;;;;;;;;;;
 PROV3789;Puna;;;;;;;;;;;;;
 PROV3790;Karanki;;;;;;;;;;;;;
 PROV3791;Pansaliyu;;;;;;;;;;;;;
@@ -23,7 +23,7 @@ PROV3802;Chankay;;;;;;;;;;;;;
 PROV3803;Ichma;;;;;;;;;;;;;
 PROV3804;Yawyu;;;;;;;;;;;;;
 PROV3805;Qahatanpu;;;;;;;;;;;;;
-PROV3806;Muyupampa;;;;;;;;;;;;;
+PROV3806;Kaskayunka;;;;;;;;;;;;;
 PROV3807;Yurimawas;;;;;;;;;;;;;
 PROV3808;Purum Llaqta;;;;;;;;;;;;;
 PROV3809;Wallaqasuyu;;;;;;;;;;;;;
@@ -47,7 +47,7 @@ PROV3826;Unkara;;;;;;;;;;;;;
 PROV3827;Pisqu;;;;;;;;;;;;;
 PROV3828;Naska;;;;;;;;;;;;;
 PROV3829;Qarawili;;;;;;;;;;;;;
-PROV3830;Qanchi;;;;;;;;;;;;;
+PROV3830;Qanchis;;;;;;;;;;;;;
 PROV3831;Parkus;;;;;;;;;;;;;
 PROV3832;Willkas;;;;;;;;;;;;;
 PROV3833;Suras;;;;;;;;;;;;;
@@ -55,5 +55,5 @@ PROV3834;Hanan Rukanas;;;;;;;;;;;;;
 PROV3835;Antamarka;;;;;;;;;;;;;
 PROV3836;Hurin Rukanas;;;;;;;;;;;;;
 PROV3837;Kuntisuyu;;;;;;;;;;;;;
-PROV3838;Kutapampa;;;;;;;;;;;;;
+PROV3838;Antapampa;;;;;;;;;;;;;
 PROV3839;Apurimaqsuyu;;;;;;;;;;;;;
