--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -2000,3 +2000,48 @@ PROV3965;Ailewu Abo;;;;;;;;;;;;;
 PROV3966;Berebuluman;;;;;;;;;;;;;
 PROV3967;Alfayruz;;;;;;;;;;;;;
 PROV3968;Rida' Al'Ashriea;;;;;;;;;;;;;
+PROV3969;Shapalula;;;;;;;;;;;;;
+PROV3970;Karuchamba;;;;;;;;;;;;;
+PROV3971;Chapara;;;;;;;;;;;;;
+PROV3972;Malacatu;;;;;;;;;;;;;
+PROV3973;Kalpa;;;;;;;;;;;;;
+PROV3974;Ayawaka;;;;;;;;;;;;;
+PROV3975;Wayakundu;;;;;;;;;;;;;
+PROV3976;Kopis;;;;;;;;;;;;;
+PROV3977;Quwayllu;;;;;;;;;;;;;
+PROV3978;Yarus;;;;;;;;;;;;;
+PROV3979;Hatun Pajonal;;;;;;;;;;;;;
+PROV3980;Pirus;;;;;;;;;;;;;
+PROV3981;Mozo;;;;;;;;;;;;;
+PROV3982;Chunchu;;;;;;;;;;;;;
+PROV3983;Pawqartampu;;;;;;;;;;;;;
+PROV3984;Laris;;;;;;;;;;;;;
+PROV3985;Willka Qhichwa;;;;;;;;;;;;;
+PROV3986;Kutapampa;;;;;;;;;;;;;
+PROV3987;Chilki;;;;;;;;;;;;;
+PROV3988;Chumpiwillka;;;;;;;;;;;;;
+PROV3989;Kapana;;;;;;;;;;;;;
+PROV3990;Qullawa;;;;;;;;;;;;;
+PROV3991;Yarapaya;;;;;;;;;;;;;
+PROV3992;Kilka;;;;;;;;;;;;;
+PROV3993;Karuma;;;;;;;;;;;;;
+PROV3994;Muqiwa;;;;;;;;;;;;;
+PROV3995;Tarata;;;;;;;;;;;;;
+PROV3996;K'anas;;;;;;;;;;;;;
+PROV3997;Ayawiri;;;;;;;;;;;;;
+PROV3998;Yanamayu;;;;;;;;;;;;;
+PROV3999;Moina;;;;;;;;;;;;;
+PROV4000;Qulla;;;;;;;;;;;;;
+PROV4001;Kallawaya;;;;;;;;;;;;;
+PROV4002;Chukuwitu;;;;;;;;;;;;;
+PROV4003;Iruhitu;;;;;;;;;;;;;
+PROV4004;Tiwanaku;;;;;;;;;;;;;
+PROV4005;Umasuyu;;;;;;;;;;;;;
+PROV4006;Mankasuyu;;;;;;;;;;;;;
+PROV4007;Q'araqullu;;;;;;;;;;;;;
+PROV4008;Parya;;;;;;;;;;;;;
+PROV4009;Suras;;;;;;;;;;;;;
+PROV4010;Muratu;;;;;;;;;;;;;
+PROV4011;Karakara;;;;;;;;;;;;;
+PROV4012;Chuwis;;;;;;;;;;;;;
+PROV4013;Chicka;;;;;;;;;;;;;
