--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -348,8 +348,8 @@ VRN_march;Markgrafschaft Bern;;;;;;;;;;;;;
 KLV;Kalavria;x;;;;
 KLV_ADJ;Kalavrian;x;;;;
 HUN;Magyarország;;;;;;;;;;;;
-EST;Eestimaa;;;;;;;;;;;;
-EST_ADJ;Eesti;;;;;;;;;;;;
+EST;Maavald;;;;;;;;;;;;
+EST_ADJ;Maarahvas;;;;;;;;;;;;
 DOR;Düörpm;;;;;;;;;;;;;
 DOR_ADJ;Düörpmer;;;;;;;;;;;;;
 KOL;Cölln;;;;;;;;;;;;;
@@ -1095,6 +1095,7 @@ epirote;Epirote;x;;;;
 moesogothic;Moesogoths;x;;;;
 meryan;Mejalasi;x;;;;
 muromian;Muromlasi;x;;;;
+estonian;Maarahvas;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Pagan;x;;;;
