--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -984,7 +984,6 @@ ugrian;Ugrian;Ougrien;Ugrisch;;Ugriana;;;;;;;;
 baltic;Baltic;Balte;Baltisch;;El Báltico;;;;;;;;
 lithuanian;Lituvian;Lituvien;Lituvisch;;Lituva;;;;;;;;
 latvian;Lettovian;Lettovien;Lettovisch;;Lettova;;;;;;;;
-estonian;Estonian;Estonien;Estnisch;;Estonia;;;;;;;;
 greek;Greek;Grec;Griechisch;;Griega;;;;;;;;
 georgian;Georgian;Géorgien;Georgisch;;Georgiana;;;;;;;;
 armenian;Owm Armenian;Arménien;Armenisch;;Armenia;;;;;;;;
@@ -9899,7 +9898,7 @@ PROV2282;Kañari;;;;;;;;;;;;
 PROV2284;Tena;Tena;Tena;;Tena;;;;;;;;
 PROV2285;Galápagos;Galapagos;Galapagos;;Galápagos;;;;;;;;
 PROV2286;Iquitos;Iquitos;Iquitos;;Iquitos;;;;;;;;
-PROV2287;Chachapuya;;;;;;;;;;;;
+PROV2287;Kwilap;;;;;;;;;;;;
 PROV2288;Yuncos;Yuncos;Yuncos;;Yuncos;;;;;;;;
 PROV2289;Puca Urco;Puca Urco;Puca Urco;;Puca Urco;;;;;;;;
 PROV2290;Kashamarka;;;;;;;;;;;;
@@ -9912,21 +9911,21 @@ PROV2296;Wanka;;;;;;;;;;;;
 PROV2298;Warmiy;;;;;;;;;;;;
 PROV2300;Pucallpa;Pucallpa;Pucallpa;;Pucallpa;;;;;;;;
 PROV2301;Puerto Maldonado;Puerto Maldonado;Puerto Maldonado;;Puerto Maldonado;;;;;;;;
-PROV2302;Qusqu;;;;;;;;;;;;
+PROV2302;Qosqo;;;;;;;;;;;;
 PROV2303;Hatunqulla;;;;;;;;;;;;
-PROV2304;Qillqa;;;;;;;;;;;;
+PROV2304;Kamana;;;;;;;;;;;;
 PROV2305;Antofagasta;Antofagasta;Antofagasta;;Antofagasta;;;;;;;;
 PROV2306;Sorocaba;Sorocaba;Sorocaba;;Sorocaba;;;;;;;;
 PROV2307;Iquique;Iquique;Iquique;;Iquique;;;;;;;;
 PROV2308;Arica;Arica;Arica;;Arica;;;;;;;;
 PROV2309;Calama;Calama;Calama;;Calama;;;;;;;;
 PROV2310;Axawiri;;;;;;;;;;;;
-PROV2311;Cochabamba;Cochabamba;Cochabamba;;Cochabamba;;;;;;;;
+PROV2311;Charka;;;;;;;;;;;;
 PROV2312;Oruro;Oruro;Oruro;;Oruro;;;;;;;;
 PROV2313;Chuquisaca;Chuquisaca;Chuquisaca;;Chuquisaca;;;;;;;;
 PROV2314;Potos?Potosi;Potosi;;Potos?;;;;;;;;;
 PROV2315;Tarija;Tarija;Tarija;;Tarija;;;;;;;;
-PROV2316;Santa Cruz;Santa Cruz;Santa Cruz;;Santa Cruz;;;;;;;;
+PROV2316;Yampara;;;;;;;;;;;;
 PROV2317;San Ignacio;San Ignacio;San Ignacio;;San Ignacio;;;;;;;;
 PROV2318;Robor?Robore;Robore;;Robore;;;;;;;;;
 PROV2319;Santa Ana;Santa Ana;Santa Ana;;Santa Ana;;;;;;;;
@@ -10109,7 +10108,7 @@ PROV2573;Mboul;Mboul;Mboul;;Mboul;;;;;;;;
 PROV2574;Mochudi;Mochudi;Mochudi;;Mochudi;;;;;;;;
 PROV2575;Ipoh;Ipoh;Ipoh;;Ipoh;;;;;;;;
 PROV2576;Natuna;Natuna;Natuna;;Natuna;;;;;;;;
-PROV2578;Muqiwa;;;;;;;;;;;;
+PROV2578;Sama;;;;;;;;;;;;
 PROV2579;Chuuk;;;;;;;;;;;;
 PROV2592;Ungava;Ungava;Ungava;;Ungava;;;;;;;;
 PROV2593;Fort George;Fort George;Fort George;;Fort George;;;;;;;;
