France pops rework
Pop rework for france and 2 new provinces for Breizh

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -2045,3 +2045,5 @@ PROV4010;Muratu;;;;;;;;;;;;;
 PROV4011;Karakara;;;;;;;;;;;;;
 PROV4012;Chuwis;;;;;;;;;;;;;
 PROV4013;Chicka;;;;;;;;;;;;;
+PROV4014;Redon;;;;;;;;;;;;;
+PROV4015;Sant-Maloù;;;;;;;;;;;;;
