--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -825,6 +825,7 @@ franco_romance;Franco-Romance;x;;;;
 high_germanic;High Germanic;x;;;;
 low_germanic;Low Germanic;x;;;;
 gothic_group;Gothic Group;x;;;;
+pan_albanian;Albanian;;;;;;;;;;;;;
 galetzian;Galetzian;x;;;;
 ispannu;Ispanniscu;x;;;;
 tarragones;Tarragonès;x;;;;
@@ -1125,6 +1126,15 @@ moesogothic;Moesogoths;x;;;;
 meryan;Mejalasi;x;;;;
 muromian;Muromlasi;x;;;;
 estonian;Maarahvas;x;;;;
+breton;Brezhoneg;;;;;;;;;;;;;
+occitan;Occitan;;;;;;;;;;;;;
+picard;Francique;;;;;;;;;;;;;
+auvergnat;Alvernhatz;x;;;;
+tolosan;Tolosan;x;;;;
+daufinenc;Daufinenc;x;;;;
+creissent;Creissent;x;;;;
+gallo;Gallo;x;;;;
+divreen;Divréen;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Pagan;x;;;;
