Apparently I added stuff last time?

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -132,7 +132,7 @@ PROV3316;Zakatata;;;;;;;;;;;;;
 PROV3315;Sochi;;;;;;;;;;;;;
 PROV3313;Valinço;;;;;;;;;;;;;
 PROV3312;Salzbrunn;;;;;;;;;;;;;
-PROV3311;Blue Ridge;;;;;;;;;;;;;
+PROV3311;Kana’tsioharéke;;;;;;;;;;;;;
 PROV3310;Huntsville;;;;;;;;;;;;;
 PROV3309;Tlatlauquiltepec;;;;;;;;;;;;;
 PROV3308;Shupenze;;;;;;;;;;;;;
@@ -749,6 +749,46 @@ mountain;Montane Grassland;;;;;;;;;;;;;
 montane_tundra;Alpine Tundra;;;;;;;;;;;;;
 montane_forest;Montane Forest;;;;;;;;;;;;;
 savanna;Savanna;;;;;;;;;;;;;
+PROV2146;Blauhaven;;;;;;;;;;;;;
+PROV2627;Degaiadahkwa';;;;;;;;;;;;;
+PROV60;Strjittestêd;;;;;;;;;;;;;
+PROV80;Ahkwesáhsne;;;;;;;;;;;;
+PROV209;Charlotte;;;;;;;;;;;;
+PROV210;Wilmington;;;;;;;;;;;;
+PROV212;Grienheuvel;;;;;;;;;;;;
+PROV213;Lytsflaanderen;;;;;;;;;;;;
+PROV214;Norfolk;;;;;;;;;;;;
+PROV215;Frjemdbergen;;;;;;;;;;;;
+PROV216;Roanoke;;;;;;;;;;;;
+PROV219;Goesdaam;;;;;;;;;;;;
+PROV220;Marijestêd;;;;;;;;;;;;;
+PROV221;Lytskleef;;;;;;;;;;;;
+PROV222;Nij-Oamde;;;;;;;;;;;;
+PROV223;Nij-Doarestêd;;;;;;;;;;;;
+PROV224;Stielstêd;;;;;;;;;;;;
+PROV225;Fort Hollân;;;;;;;;;;;;
+PROV226;Lytsdrinte;;;;;;;;;;;;
+PROV227;Pittsburgh;;;;;;;;;;;;
+PROV228;Wenrohronon;;;;;;;;;;;;
+PROV229;Berjen;;;;;;;;;;;;
+PROV230;Twagrins;;;;;;;;;;;;
+PROV231;Eardsjestêd;;;;;;;;;;;;;
+PROV232;Atérævile;;;;;;;;;;;;
+PROV233;Ile Tallebùr;;;;;;;;;;;;
+PROV234;Pempotowwuthut;;;;;;;;;;;;
+PROV235;Gayogohóno';;;;;;;;;;;;
+PROV236;Onödowá'ga;;;;;;;;;;;;
+PROV237;Skarùre;;;;;;;;;;;;
+PROV238;Ononda’gegá;;;;;;;;;;;;
+PROV239;Onyota'aka;;;;;;;;;;;;
+PROV240;Kaniènke;;;;;;;;;;;;
+PROV241;Escqetenbæ;;;;;;;;;;;;
+PROV242;P'timaræ;;;;;;;;;;;;
+PROV243;Novéle Rochéle;;;;;;;;;;;;
+PROV244;Croésai-l'Étoéle;;;;;;;;;;;;
+PROV245;Pontoosuck;;;;;;;;;;;;
+PROV247;Mùscqétie;;;;;;;;;;;;
+PROV248;Lewiston;;;;;;;;;;;;
 PROV305;Tråante;;;;;;;;;;;;;
 PROV306;Bådåddjo;;;;;;;;;;;;;
 PROV307;Romsa;;;;;;;;;;;;
@@ -1437,7 +1477,6 @@ PROV734;Trént;;;;;;;;;;;;;
 PROV735;Bulsan;;;;;;;;;;;;
 PROV2568;Lauwens;;;;;;;;;;;;
 PROV2124;Maore;;;;;;;;;;;;;
-PROV220;Annapolis;;;;;;;;;;;;;
 PROV2588;Ääninen;;;;;;;;;;;;
 PROV2745;Gulf of Se Gadira;;;;;;;;;;;;;
 PROV2744;Lusitanian Sea;;;;;;;;;;;;
@@ -1467,9 +1506,7 @@ PROV1;Novoarkhangelsk;;;;;;;;;;;;;
 PROV107;Riverside;;;;;;;;;;;;;
 PROV108;Grand Junction;;;;;;;;;;;;;
 PROV104;San Francisco;;;;;;;;;;;;;
-PROV2146;D.C.;;;;;;;;;;;;;
 PROV2148;Albuquerque;;;;;;;;;;;;;
-PROV231;Camden;;;;;;;;;;;;;
 UCA_2191;El Salvador;;;;;;;;;;;;;
 UCA_2193;Honduras;;;;;;;;;;;;;
 CHI_2221;South Jiangsu;;;;;;;;;;;;;
@@ -1553,7 +1590,6 @@ PROV2628;Iximche;;;;;;;;;;;;;
 BAV_601;Niederbayern;;;;;;;;;;;;;
 PROV3249;Old Tianjin;;;;;;;;;;;;;
 PROV606;Lozärn;;;;;;;;;;;;;
-PROV2627;Coudersport;;;;;;;;;;;;;
 PROV160;Superior;;;;;;;;;;;;;
 PROV3250;Bügei;;;;;;;;;;;;;
 PROV3251;Mónegu;;;;;;;;;;;;;
@@ -1569,7 +1605,6 @@ PROV3254;Bückeborg;;;;;;;;;;;;;
 PROV3255;Reuss;;;;;;;;;;;;;
 PROV3256;Sondershausen;;;;;;;;;;;;;
 PROV3257;Waldeck;;;;;;;;;;;;;
-PROV60;Richmond;;;;;;;;;;;;;
 PROV211;Lynchburg;;;;;;;;;;;;;
 PROV2186;Chiya;;;;;;;;;;;;;
 PROV14;Victoria;;;;;;;;;;;;;
@@ -2134,3 +2169,8 @@ PROV4038;Tàranto;;;;;;;;;;;;;
 PROV4039;Grante Croés;;;;;;;;;;;;;
 PROV4040;Sèlvaciutat;;;;;;;;;;;;;
 PROV4041;Nòu-Tolosa;;;;;;;;;;;;;
+PROV4042;Sént-Jhénérùs;;;;;;;;;;;;;
+PROV4043;Nipnéte;;;;;;;;;;;;;
+PROV4044;Burevile;;;;;;;;;;;;;
+PROV4045;Piçhætoçhe;;;;;;;;;;;;;
+PROV4046;Fort Fribù;;;;;;;;;;;;;
