--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -837,6 +837,12 @@ EBL_ADJ;Ebenenlander;;;;;;;;;;;;;
 OGC;Orgogchid;;;;;;;;;;;;;
 OGC_march;Marche des Déserteurs;;;;;;;;;;;;;
 OGC_ADJ;Orgogch;;;;;;;;;;;;;
+MOC;Monacan;;;;;;;;;;;;;
+MOC_ADJ;Monacan;;;;;;;;;;;;;
+LEN;Lënapehòkink;;;;;;;;;;;;;
+LEN_ADJ;Lënapeyok;;;;;;;;;;;;;
+ADS;Andaste;;;;;;;;;;;;;
+ADS_ADJ;Andaste;;;;;;;;;;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Partei;x;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -1189,7 +1195,6 @@ skansk;Skansk;x;;;;
 vinlandic;Vinlandic;x;;;;
 kvaani;Kvaani;x;;;;
 siwa;Siwa;x;;;;
-afro_phoenician;Afro-Phoenician;x;;;;
 wa;Wa;x;;;;
 aryao;Aryao;x;;;;
 sogdian;Sogdian;x;;;;
@@ -1272,6 +1277,10 @@ cowichan;Cowichan;x;;;;
 montagnais;Montagnais;x;;;;
 wyandot;Wyandot;x;;;;
 mohawk;Mohawk;x;;;;
+creaul;Créàul;x;;;;
+afro_frisian;Afro-Frysk;x;;;;
+mohacan;Mohacan;x;;;;
+andaste;Andaste;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Pagan;x;;;;
