Added Nowa Gdanszcz

--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -843,6 +843,8 @@ LEN;Lënapehòkink;;;;;;;;;;;;;
 LEN_ADJ;Lënapeyok;;;;;;;;;;;;;
 ADS;Andaste;;;;;;;;;;;;;
 ADS_ADJ;Andaste;;;;;;;;;;;;;
+NWG;Nowa Gdanszcz;;;;;;;;;;;;;
+NWG_ADJ;Nowa Gdanszczi;;;;;;;;;;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Partei;x;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
