--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -14,8 +14,8 @@ KNT;Kantäpüümaa;x;;;;
 KNT_ADJ;Kantäpüün;x;;;;
 KAU;Kaupmeesmaa;x;;;;
 KAU_ADJ;Kaupmeesid;x;;;;
-SHN;Great Shun;x;;;;
-SHN_ADJ;Shun;x;;;;
+SHN;Chine;x;;;;
+SHN_ADJ;Chinois;x;;;;
 TPW;Powo;x;;;;
 TPW_ADJ;Powonese;x;;;;
 THR;Hor;x;;;;
