A lot of changes
-Did pops for about half of the North America HRE
-Added a few Muhammadite City-States around the Mediterranean
-Added new provinces
-Added a African Catholic Order (Will add another later)
-Changed some loc
-Changed some nations' colours

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -207,7 +207,7 @@ PROV511;Onuba;;;;;;;;;;;;
 PROV512;Sa Gadira;;;;;;;;;;;;
 PROV513;Ilibere;;;;;;;;;;;;
 PROV514;Malaga;;;;;;;;;;;;
-PROV515;Orci;;;;;;;;;;;;
+PROV515;Ourqi;;;;;;;;;;;;
 PROV516;Orancu;;;;;;;;;;;;
 PROV517;Mont Eracle;;;;;;;;;;;;
 PROV518;Portugal;;;;;;;;;;;;
@@ -286,7 +286,7 @@ PROV1728;Ruspina;;;;;;;;;;;;
 PROV1729;Tuseru;;;;;;;;;;;;
 PROV1730;Capsa;;;;;;;;;;;;
 PROV1731;Oia;;;;;;;;;;;;
-PROV1732;Tabalati;;;;;;;;;;;;
+PROV1732;Tizarmi;;;;;;;;;;;;
 PROV1733;Tubacte;;;;;;;;;;;;
 PROV1734;Sirt;Sirt;Sirt;;Sirte;;;;;;;;
 PROV1735;Benghazi;Benghazi;Benghazi;;Bengasi;;;;;;;;
@@ -397,7 +397,7 @@ PROV3285;Nyíregyháza;;;;;;;;;;;;;
 PROV3287;Baldolzu;;;;;;;;;;;;;
 PROV3288;Tarvis;;;;;;;;;;;;;
 PROV3289;Építenújra;;;;;;;;;;;;;
-PROV3280;Edmundston;;;;;;;;;;;;;
+PROV3280;Sigenigteoag;;;;;;;;;;;;;
 PROV3290;Bosilegrad;;;;;;;;;;;;;
 PROV3291;Strumica;;;;;;;;;;;;;
 PROV521;Ulisibu;;;;;;;;;;;;;
@@ -619,10 +619,6 @@ PROV33;Battleford;;;;;;;;;;;;;
 PROV41;Fort Ellice;;;;;;;;;;;;;
 PROV30;Chimney Coulee;;;;;;;;;;;;;
 PROV2594;Osnaburgh House;;;;;;;;;;;;;
-PROV49;Rat Portage;;;;;;;;;;;;;
-PROV52;Orillia;;;;;;;;;;;;;
-PROV75;Port-Aux-Basques;;;;;;;;;;;;;
-PROV69;Petit-Sault;;;;;;;;;;;;;
 PROV683;Walbrzych;;;;;;;;;;;;;
 PROV43;Clarksville;;;;;;;;;;;;;
 PROV134;Fort Parker;;;;;;;;;;;;;
@@ -665,7 +661,6 @@ BUR_1334;Tagaung;;;;;;;;;;;;;
 PROV579;Neuwied;;;;;;;;;;;;;
 PROV574;Coblenz;;;;;;;;;;;;;
 PROV547;Greifswald;;;;;;;;;;;;;
-PROV57;Bytown;;;;;;;;;;;;;
 PROV2036;Mzizima;;;;;;;;;;;;;
 PROV2681;Taipei;;;;;;;;;;;;;
 PROV1485;Tainan;;;;;;;;;;;;;
@@ -751,29 +746,59 @@ montane_forest;Montane Forest;;;;;;;;;;;;;
 savanna;Savanna;;;;;;;;;;;;;
 PROV2146;Blauhaven;;;;;;;;;;;;;
 PROV2627;Degaiadahkwa';;;;;;;;;;;;;
+PROV9;Matimekosh;;;;;;;;;;;;;
+PROV46;Onenda;;;;;;;;;;;;
+PROV47;Fort Severn;;;;;;;;;;;;
+PROV48;Fort Sainte-Anne;;;;;;;;;;;
+PROV49;Rat Portage;;;;;;;;;;;;;
+PROV51;Sainte-Anne-des-Pins;;;;;;;;;;;;
+PROV52;Lacéflore;;;;;;;;;;;;;
+PROV53;Barrie;;;;;;;;;;;;
+PROV54;Windsor;;;;;;;;;;;;
+PROV55;Hamilton;;;;;;;;;;;;
+PROV56;Cataraqui;;;;;;;;;;;;
+PROV57;Odàwàg;;;;;;;;;;;;;
+PROV58;Kitchisîpi;;;;;;;;;;;;
 PROV60;Strjittestêd;;;;;;;;;;;;;
+PROV61;Rochefortin;;;;;;;;;;;;
+PROV62;Natashquan;;;;;;;;;;;;
+PROV63;Temikami;;;;;;;;;;;;
+PROV64;Lanaudière;;;;;;;;;;;;
+PROV65;Québec;;;;;;;;;;;;
+PROV66;Trois-Rivières;;;;;;;;;;;;
+PROV67;Peskowetk;;;;;;;;;;;;
+PROV68;Fort Saint-Jean;;;;;;;;;;;;
+PROV69;Sainte-Croix;;;;;;;;;;;;;
+PROV70;Isle-Saint-Jean;;;;;;;;;;;;
+PROV71;Sént-Martin;;;;;;;;;;;;
+PROV72;Beaubassin;;;;;;;;;;;;
+PROV73;Isle-Rôyale;;;;;;;;;;;;
+PROV74;Saint Johns;;;;;;;;;;;;
+PROV75;Port-Aux-Basques;;;;;;;;;;;;;
+PROV76;Cadoc;;;;;;;;;;;;
+PROV77;St Pierre;;;;;;;;;;;;
 PROV80;Ahkwesáhsne;;;;;;;;;;;;
 PROV209;Charlotte;;;;;;;;;;;;
 PROV210;Wilmington;;;;;;;;;;;;
-PROV212;Grienheuvel;;;;;;;;;;;;
-PROV213;Lytsflaanderen;;;;;;;;;;;;
+PROV212;Rassawek;;;;;;;;;;;;
+PROV213;Massinacak;;;;;;;;;;;;
 PROV214;Norfolk;;;;;;;;;;;;
-PROV215;Frjemdbergen;;;;;;;;;;;;
+PROV215;Manahoac;;;;;;;;;;;;
 PROV216;Roanoke;;;;;;;;;;;;
 PROV219;Goesdaam;;;;;;;;;;;;
 PROV220;Marijestêd;;;;;;;;;;;;;
-PROV221;Lytskleef;;;;;;;;;;;;
+PROV221;Mowhemencho;;;;;;;;;;;;
 PROV222;Nij-Oamde;;;;;;;;;;;;
 PROV223;Nij-Doarestêd;;;;;;;;;;;;
-PROV224;Stielstêd;;;;;;;;;;;;
-PROV225;Fort Hollân;;;;;;;;;;;;
-PROV226;Lytsdrinte;;;;;;;;;;;;
+PROV224;Conestoga;;;;;;;;;;;;
+PROV225;Susquehannock;;;;;;;;;;;;
+PROV226;Peshtank;;;;;;;;;;;;
 PROV227;Pittsburgh;;;;;;;;;;;;
 PROV228;Wenrohronon;;;;;;;;;;;;
-PROV229;Berjen;;;;;;;;;;;;
-PROV230;Twagrins;;;;;;;;;;;;
+PROV229;Minisink;;;;;;;;;;;;
+PROV230;Naraticonck;;;;;;;;;;;;
 PROV231;Eardsjestêd;;;;;;;;;;;;;
-PROV232;Atérævile;;;;;;;;;;;;
+PROV232;Raritan;;;;;;;;;;;;
 PROV233;Ile Tallebùr;;;;;;;;;;;;
 PROV234;Pempotowwuthut;;;;;;;;;;;;
 PROV235;Gayogohóno';;;;;;;;;;;;
@@ -788,7 +813,9 @@ PROV243;Novéle Rochéle;;;;;;;;;;;;
 PROV244;Croésai-l'Étoéle;;;;;;;;;;;;
 PROV245;Pontoosuck;;;;;;;;;;;;
 PROV247;Mùscqétie;;;;;;;;;;;;
-PROV248;Lewiston;;;;;;;;;;;;
+PROV248;Sént-Lùisét;;;;;;;;;;;;
+PROV249;Port-des-Roches;;;;;;;;;;;;
+PROV250;Caribou;;;;;;;;;;;;
 PROV305;Tråante;;;;;;;;;;;;;
 PROV306;Bådåddjo;;;;;;;;;;;;;
 PROV307;Romsa;;;;;;;;;;;;
@@ -930,6 +957,7 @@ PROV502;Ìsulas Baleares;;;;;;;;;;;;
 PROV533;Lun;;;;;;;;;;;;
 PROV543;Oamde;;;;;;;;;;;;
 PROV2570;Biauvais;;;;;;;;;;;;
+PROV2593;Kuujjuarapik;;;;;;;;;;;;
 PROV2622;Ba-lé-Duc;;;;;;;;;;;;;
 PROV3252;Fòish;;;;;;;;;;;;;
 PROV3314;Boulonne;;;;;;;;;;;;;
@@ -943,6 +971,7 @@ PROV698;Klaped;;;;;;;;;;;;
 PROV707;Rebalädel;;;;;;;;;;;;
 PROV708;Pawiksla;;;;;;;;;;;;
 PROV2587;Kuâlõk;;;;;;;;;;;;
+PROV2592;Bahadur;;;;;;;;;;;;
 PROV2709;Gulf of Rigõ;;;;;;;;;;;;
 PROV2714;Nevajärvi;;;;;;;;;;;;
 PROV3326;Butsiek;;;;;;;;;;;;;
@@ -1027,7 +1056,7 @@ PROV2224;Antigua & Barbuda;;;;;;;;;;;;;
 PROV2220;Turks & Caicos;;;;;;;;;;;;;
 CHI_1082;Guanwai;;;;;;;;;;;;;
 PROV2591;Tranquebar;;;;;;;;;;;;;
-PROV2625;North West River;;;;;;;;;;;;;
+PROV2625;Asgerkoloni;;;;;;;;;;;;;
 PROV2580;Laadogalinn;;;;;;;;;;;;;
 PROV995;Äänislinna;;;;;;;;;;;;;
 PROV950;Ungvár;;;;;;;;;;;;;
@@ -1154,9 +1183,6 @@ PROV21;Kootenay;;;;;;;;;;;;;
 PROV44;Tecpantepec;;;;;;;;;;;;;
 CAN_46;Upper Canada;;;;;;;;;;;;;
 CAN_50;Northern Ontario;;;;;;;;;;;;;
-CAN_58;Lower Canada;;;;;;;;;;;;;
-CAN_60;Northern Quebec;;;;;;;;;;;;;
-ENG_68;Maritimes;;;;;;;;;;;;;
 MEX_94;Nevada;;;;;;;;;;;;;
 MEX_97;Utah;;;;;;;;;;;;;
 USA_201;Georgia;;;;;;;;;;;;;
@@ -1572,7 +1598,6 @@ PROV27;Edmonton;;;;;;;;;;;;;
 PROV31;Black Lake;;;;;;;;;;;;;
 PROV32;La Ronge;;;;;;;;;;;;;
 PROV40;Dauphin;;;;;;;;;;;;;
-PROV9;Fort MacKenzie;;;;;;;;;;;;;
 PROV2626;Sakami;;;;;;;;;;;;;
 PROV59;Mistissini;;;;;;;;;;;;;
 PROV2140;Hermosillo;;;;;;;;;;;;;
@@ -1710,7 +1735,23 @@ AUS_624;Keleti-Nyitra;;;;;;;;;;;;;
 AUS_647;Alföld;;;;;;;;;;;;;
 AUS_950;Kárpátalja;;;;;;;;;;;;;
 FRA_2622;Bar;;;;;;;;;;;;;
+ENG_68;Haute Acadie;;;;;;;;;;;;;
+ENG_74;Vinland;;;;;;;;;;;;
+ENG_76;Markland;;;;;;;;;;;;
+USA_243;Novéle Aunis;;;;;;;;;;;;
+USA_246;Nòva Aquitània;;;;;;;;;;;;
+USA_247;Basse Acadie;;;;;;;;;;;;
+USA_248;Terres des Saints;;;;;;;;;;;;
 FRA_399;Guise;;;;;;;;;;;;
+USA_232;Six Nations;;;;;;;;;;;;
+USA_4042;Novæ Poétù;;;;;;;;;;;;
+CAN_48;Route des Fourrures;;;;;;;;;;;;
+CAN_57;Algonquie;;;;;;;;;;;;;
+CAN_58;Québec;;;;;;;;;;;;;
+CAN_60;Ungava;;;;;;;;;;;;;
+CAN_62;Montagnais;;;;;;;;;;;;
+CAN_239;Caniencquie;;;;;;;;;;;;
+CAN_4058;Gaspésie;;;;;;;;;;;;
 PROV3490;Stavanger;;;;;;;;;;;;;
 PROV3491;San Carlos;;;;;;;;;;;;;
 PROV3492;Juigalpa;;;;;;;;;;;;;
@@ -2174,3 +2215,23 @@ PROV4043;Nipnéte;;;;;;;;;;;;;
 PROV4044;Burevile;;;;;;;;;;;;;
 PROV4045;Piçhætoçhe;;;;;;;;;;;;;
 PROV4046;Fort Fribù;;;;;;;;;;;;;
+PROV4047;Blauwefesting;;;;;;;;;;;;;
+PROV4048;Schinendoj;;;;;;;;;;;;;
+PROV4049;Snits;;;;;;;;;;;;;
+PROV4050;Iikstêd;;;;;;;;;;;;;
+PROV4051;Kawennìo;;;;;;;;;;;;;
+PROV4052;Plandefum;;;;;;;;;;;;;
+PROV4053;Anoçhinapie;;;;;;;;;;;;;
+PROV4054;Pentagouets;;;;;;;;;;;;;
+PROV4055;Voulastoue;;;;;;;;;;;;;
+PROV4056;Cqéspùcqie;;;;;;;;;;;;;
+PROV4057;Mawiomiwikuom;;;;;;;;;;;;;
+PROV4058;Gespegeoag;;;;;;;;;;;;;
+PROV4059;Atarópouli;;;;;;;;;;;;;
+PROV4060;Sant'Ambrozu;;;;;;;;;;;;;
+PROV4061;Tabalati;;;;;;;;;;;;;
+PROV4062;Letpia;;;;;;;;;;;;;
+PROV4063;Turga;;;;;;;;;;;;;
+PROV4064;Soor;;;;;;;;;;;;;
+PROV4065;Suffluiu;;;;;;;;;;;;;
+PROV4066;Badia;;;;;;;;;;;;;
