--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -47,17 +47,20 @@ TLD_ADJ;Toletuan;x;;;;
 ISP;Ispannia;x;;;;
 ISP_absolute_monarchy;Rennu Ispanniscu;x;;;;
 ISP_ADJ;Ispanniscan;x;;;;
+ODC;Ordo dezu Cretzu;x;;;;
+ODC_ADJ;Cretzuan;x;;;;
 CTG;Cartaginnia;x;;;;
 CTG_ADJ;Cartaginnian;x;;;;
 GTL;Gothalaunia;x;;;;
 GTL_ADJ;Gothalaunians;x;;;;
 GTL_march;Marcha de Gothalaunia;x;;;;
-MTN;Muretannia;x;;;;
+MTN;Rennu dezos Mures;x;;;;
+MTN_democracy;Muretannia;x;;;;
 MTN_ADJ;Muretannian;x;;;;
 ISG;Agawa;x;;;;
 ISG_ADJ;Agawa;x;;;;
-MSA;Numidia;x;;;;
-MSA_ADJ;Numidian;x;;;;
+MSA;Nmiza;x;;;;
+MSA_ADJ;Nmizan;x;;;;
 MSL;Rusigan;x;;;;
 MSL_ADJ;Rusiganu;x;;;;
 SZA;Kunság;x;;;;
@@ -558,10 +561,11 @@ NEJ;Al-Dawsari;;;;;;;;;;;;
 NEJ_ADJ;Dawsari;;;;;;;;;;;;
 ABU;Abu Zaby;;;;;;;;;;;;;
 ABU_ADJ;Abu Zaby;;;;;;;;;;;;;
-RAF;Africa;;;;;;;;;;;;;
-RAF_ADJ;African;;;;;;;;;;;;
-RAF_absolute_monarchy;Africa;;;;;;;;;;;;;
-RAF_prussian_constitutionalism;Africa;;;;;;;;;;;;;
+RAF;Afriga;;;;;;;;;;;;;
+RAF_ADJ;Afrigan;;;;;;;;;;;;
+RAF_absolute_monarchy;Afriga;;;;;;;;;;;;;
+RAF_prussian_constitutionalism;Afriga;;;;;;;;;;;;;
+RAF_theocracy;Statu Crezastigu;;;;;;;;;;;;;
 TRA;Chera;;;;;;;;;;;;
 TRA_ADJ;Cheran;;;;;;;;;;;;
 STD;Stodoranie;;;;;;;;;;;;
@@ -865,6 +869,12 @@ ADS;Andaste;;;;;;;;;;;;;
 ADS_ADJ;Andaste;;;;;;;;;;;;;
 NWG;Nowa Gdanszcz;;;;;;;;;;;;;
 NWG_ADJ;Nowa Gdanszczi;;;;;;;;;;;;;
+URQ;L'Ourqiyya;;;;;;;;;;;;;
+URQ_ADJ;Ourqiyya;;;;;;;;;;;;;
+AAP;Atarópouli;;;;;;;;;;;;;
+AAP_ADJ;Atarópouli;;;;;;;;;;;;;
+SOO;Soor;;;;;;;;;;;;;
+SOO_ADJ;Soori;;;;;;;;;;;;;
 OOS_conservative;Konstitutsionalistid Kliik;x;;;;
 OOS_liberal;Hyvinvointi Partei;x;;;;
 OOS_reactionary;Ehejumalikunig Kildkond;x;;;;
@@ -993,11 +1003,13 @@ algic;Algic;x;;;;
 iroquoian;Iroquoian;x;;;;
 afro_romance;Afro-Romance;x;;;;
 franco_romance;Franco-Romance;x;;;;
+new_world_franco_romance;New World Franco-Romance;x;;;;
 high_germanic;High Germanic;x;;;;
 low_germanic;Low Germanic;x;;;;
 gothic_group;Gothic Group;x;;;;
-pan_albanian;Albanian;;;;;;;;;;;;;
-salish_group;Salish Group;;;;;;;;;;;;;
+pan_albanian;Albanian;x;;;;
+salish_group;Salish Group;x;;;;
+native_metis;Native-Métis;x;;;;
 galetzian;Galetzian;x;;;;
 ispannu;Ispanniscu;x;;;;
 tarragones;Tarragonès;x;;;;
@@ -1243,13 +1255,14 @@ crow_hidatsa;Crow-Hidatsa;x;;;;
 mandan;Mandan;x;;;;
 nanticocke;Nanticocke;x;;;;
 lenape;Lenape;x;;;;
+powhatan;Powhatan;x;;;;
 mohican;Mohican;x;;;;
 nipmuc;Nipmuc;x;;;;
 quiripi;Quiripi;x;;;;
 narragansett_secatogue;Nerragansett-Secatogue;x;;;;
 massachusett;Massachusett;x;;;;
 maliseet;Maliseet;x;;;;
-absenaki;Absenaki;x;;;;
+abenaki;Abenaki;x;;;;
 mikmaq;Mikmaq;x;;;;
 illinois;Illinois;x;;;;
 meskwaki;Meskwaki;x;;;;
@@ -1303,6 +1316,13 @@ creaul;Créàul;x;;;;
 afro_frisian;Afro-Frysk;x;;;;
 mohacan;Mohacan;x;;;;
 andaste;Andaste;x;;;;
+quebecois;Québécois;x;;;;
+franciquin;Françiquin;x;;;;
+east_metif;Est-Métif;x;;;;
+west_metif;Ouest-Métif;x;;;;
+algonquin;Algonquin;x;;;;
+hikmahayi;Hikmahayi;x;;;;
+bahrini;Bahrini;x;;;;
 ooselid_pantheon;Ooselid Pantheon;x;;;;
 ooselskia;Ooselskia;x;;;;
 modern_pagan;Modern Pagan;x;;;;
@@ -1332,6 +1352,7 @@ imperial_duchy;Imperial Duchy;x;;;;
 imperial_county;Imperial County;x;;;;
 imperial_city;Imperial City;x;;;;
 imperial_republic;Imperial Republic;x;;;;
+holy_order;Holy Order;x;;;;
 elective_monarchy_ruler;King;x;;;;
 oligarchic_republic_ruler;Your Majesty;x;;;;
 march_ruler;Lord;x;;;;
@@ -1339,3 +1360,4 @@ imperial_duchy_ruler;Duke;x;;;;
 imperial_county_ruler;Count;x;;;;
 imperial_city_ruler;Mayor;x;;;;
 imperial_republic_ruler;Minister;x;;;;
+holy_order_ruler;Grandmaster;x;;;;
